istio/whoami/controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
    service: whoami
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: docker.io/containous/whoami
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
