istio/whoami/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: whoami
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-certificate
      hosts:
        - "whoami.trifolium.fleeingsunlight.dev"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whoami
spec:
  hosts:
    - "*"
  gateways:
    - whoami
  http:
    - route:
        - destination:
          # <service>.<namespace>.svc.cluster.local
          host: whoami.whoami.svc.cluster.local
          port:
            number: 80
